99designs/gqlgen 마이그레이션

--- a/scripts/makefile
+++ b/scripts/makefile
@@ -1,2 +1,5 @@
 schema:
 	go-bindata -ignore=\.go -pkg=schema -o=../internal/graphql/bindata.go ../api/schema/...
+
+gqlgen:
+	cd ../ && gqlgen generate
